Update and rename saltstheme.theme.css to deepocean.theme.css

--- a/deepocean.theme.css
+++ b/deepocean.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Salts Deep Ocean Discord","description":"Requires Normaized classes to work, Makes discord look nice, Edit of the theme that comes with enhanced discord https://discord.gg/VhP9hMg","author":"Saltnuggets","version":"1.1","website":"https://discord.gg/VhP9hMg"}*//{}
+//META{"name":"Deep Ocean Discord","description":"Requires Normaized classes to work, https://github.com/SaltNuggets/","author":"salty bros#5231","version":"1.1","website":"https://discord.gg/VhP9hMg"}*//{}
 
 
 /*@import url(https://satoru8.github.io/Addons/BeautifulCategories.css);*/
